# SddGtk

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  FEATURES.md  GTK_Development_Best_Practices_Research.md  LICENSE.md  README.md  config.h.in  meson.build  meson_options.txt
.github/: BRANCH_PROTECTION.md
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  gtk.supp
.specify/memory/: constitution.md
scripts/: run-tests.sh
specs/001-hello-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-hello-app/checklists/: requirements.md
specs/001-hello-app/contracts/: application-interface.md
specs/002-image-bw-convert/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-image-bw-convert/checklists/: requirements.md
specs/002-image-bw-convert/contracts/: api-interface.md
specs/003-image-blur-effect/: README.md  data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/003-image-blur-effect/checklists/: security.md  test.md  ux.md
specs/003-image-blur-effect/contracts/: blur-api.md  hello-image-viewer-integration.md
specs/004-blur-testing-coverage/: README.md  plan.md  spec.md  tasks.md
src/hello-app/: hello-app.gresource.xml  hello-application.c  hello-application.h  hello-image-viewer.c  hello-image-viewer.h  hello-window.c  hello-window.h  main.c
src/hello-app/resources/: hello-image-viewer.ui  hello-window.ui  image-viewer.css
src/lib/: blur-cache.c  blur-cache.h  blur-processor.c  blur-processor.h  gtk-utils.c  gtk-utils.h  image-processing.c  image-processing.h
tests/ci/: run_tests.sh
tests/integration/: test-application.py
tests/performance/: blur_memory_profile.py  blur_performance.py  test_performance.py
tests/unit/: test-blur-cache.c  test-blur-integration.c  test-blur-processor.c  test-hello-application.c  test-hello-window.c  test-image-processing.c  test-image-viewer-bw.c
tests/utils/: test_utils.c  test_utils.h
tests/validation/: test_blur_ui.py  test_validation.py
